# Pho

./: .travis.yml  AUTHORS  README.md  meson.build  pho
data/: Application.css  com.github.dcharles525.pho.appdata.xml  com.github.dcharles525.pho.appdata.xml.in  com.github.dcharles525.pho.desktop  com.github.dcharles525.pho.desktop.in  com.github.dcharles525.pho.gresource.xml  com.github.dcharles525.pho.gschema.xml  com.github.phomaker.pho.appdata.xml  meson.build
debian/: changelog  control  copyright  files  rules
po/: LINGUAS  POTFILES  com.github.dcharles525.pho.pot  de.po  en.po  es.po  fr.po  nl.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
src/: Database.vala  Pho  Pho.vala  Posts.vala  Replies.vala  Thread.vala  VideoPlayer.vala
src/Structs/: .Boards.vala.swp  Boards.vala
src/Utils/: Network.vala
